Fix the background image on mobile version

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,21 @@
     font-weight: bold;
 }
 
+/*body{
+  background: url("background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+ }*/
+
+ html.md-default-theme, html, body.md-default-theme{
+   background-color:transparent !important;
+ }
+
 body{
-  background-image: url("background.jpg");
+background-image: url("background.jpg");
   background-repeat: repeat-y;
   z-index: -1;
 }
